# Meggy-Bot

./: B.py  README.md  main.py  pyproject.toml
cogs/: meggy.py  mod.py  owner.py  tasks.py
